# lexLeo

./: .gitignore  CMakeLists.txt  CMakeLists.txt.back  Doxyfile  Doxyfile_to_fetch_links  README.md  TODO.txt  parser.output  parser.tab.c  parser.tab.h
ast/: CMakeLists.txt
ast/include/ast/: ast.h
ast/src/: ast.c
compiler/: CMakeLists.txt  (+1 more)
data_structures/: CMakeLists.txt
data_structures/include/data_structures/: hashtable.h  list.h  tree.h
data_structures/src/: hashtable.c  list.c  tree.c
data_structures/tests/: CMakeLists.txt  test_hashtable.c  test_list.c
docs/: CMakeLists.txt  Doxyfile.template  DoxygenLayout.xml  TODO.txt  header.html  mainpage.md  stylesheet.css
docs/developer/: license.dox  manual_page.md
docs/developer/architecture/: architecture_page.md
docs/developer/development/: development_page.md  development_workflow.md  project_tree.dox.template
docs/developer/modules/: modules_page.md
docs/developer/testing/: testing_page.md  testing_page_strategy.md
docs/doxygen/: Doxyfile.in  Doxyfile_test.in  footer.html  header.html  layout.xml  lexleo.css
docs/doxygen/scripts/: generate_project_tree_dox.cmake  generate_project_tree_json.cmake
docs/manual/: lexer_module.dox  license.dox  project_tree.dox.template  stream_module.dox
docs/manual/architecture/: foundation_architecture_overview.md  foundation_page.md  module_taxonomy.md
docs/manual/development/: development_workflow.md
docs/manual/modules/: modules_page.md
docs/reference/: mainpage.md  reference.dox
docs/scripts/: generate_project_tree_dox.cmake  generate_project_tree_json.cmake
docs/user/: .gitkeep  user_guide.md
doxygen_management/: CMakeLists.txt  Doxyfile.template  Doxyfile_to_fetch_links.template
doxygen_management/scripts/: generate_project_tree_dox.cmake  generate_project_tree_json.cmake  make_parsable_not_source_files.cmake  map_dox_to_html.cmake  verbinclude_all_git_tracked_files.cmake
doxygen_management/static_doc_pages/: docs_index.md  lexer_parser_design.md  lexleo_flex.md  license.dox  project_tree.dox.template  welcome_page.md
doxygen_management/static_doc_pages/draft/: .lexer_parser_draft_design.autosave.xopp  draft.md  lexer_parser_draft_design.xopp
legacy/core_legacy/ast/: CMakeLists.txt
legacy/core_legacy/interpreter/: CMakeLists.txt
legacy/core_legacy/runtime_env/: CMakeLists.txt
lexer/: CMakeLists.txt
lexer/src/: lexer.l  lexer.yy.c
parser/: CMakeLists.txt
parser/include/parser/: parser.tab.h
parser/src/: parser.tab.c  parser.y
src/ast/: CMakeLists.txt
src/ast/include/: ast.h
src/ast/src/: ast.c
src/ast/tests/: test_ast.c  tests.cmake
src/cli/: CMakeLists.txt
src/cli/config/: lexleo.conf.in
src/cli/include/: cli.h
src/cli/src/: cli.c  cli_opener.c  cli_teardown.c  main.c
src/data_structures/: CMakeLists.txt  list.c
src/data_structures/include/: hashtable.h  list.h
src/data_structures/src/: hashtable.c  list.c  list_malloc.c  list_std_wrappers.c
src/data_structures/tests/: test_hashtable.c  test_list.c  test_list_with_real_malloc.c  test_list_with_stdlib.c  tests.cmake
src/interpreter/: CMakeLists.txt
src/interpreter/include/: interpreter.h
src/interpreter/src/: .gitkeep  interpreter.c
src/interpreter/tests/: test_interpreter.c  tests.cmake
src/lexer/: CMakeLists.txt
src/lexer/flex/: lexer.l
src/lexer/include/: lexer.h
src/lexer/src/: lexer.c  lexer.l  lexer_internal.h  lexer_memory_allocator.h
src/lexer/tests/: test_lexer.yy.c  tests.cmake
src/logger/: CMakeLists.txt
src/logger/include/: logger.h
src/logger/src/: logger.c
src/logger/tests/: fake_time.c  fake_time.h  test_init_logger.c  test_logger.c  tests.cmake
src/memory_allocator/: CMakeLists.txt
src/memory_allocator/include/: memory_allocator.h
src/memory_allocator/src/: memory_allocator.c
src/osal/: CMakeLists.txt
src/osal/include/: osal.h  osal_config.h.in  osal_mem.h  osal_mem_ops.h
src/osal/src/: osal_macos.c  osal_mem.c  osal_unix.c  osal_windows.c
src/parser/: CMakeLists.txt  lexer.l  lexer.yy.c  parser.tab.c  parser.y
src/parser/bison/: atom_grammar.y  grammar.y.back  number_atom_rule.y  parser.y  parser.y.in  parser.y.in.back  symbol_atom_rule.y
src/parser/include/: parser_api.h  parser_cfg.h  parser_ctx.h
src/parser/src/: parser.y  parser_api.c
src/parser/tests/: test_atom_parser.c  test_binding_parser.c  test_block_items_parser.c  test_block_parser.c  test_evaluable_parser.c  test_function_call_parser.c  test_function_definition_parser.c  test_function_parser.c  test_list_of_numbers_parser.c  test_list_of_parameters_parser.c  test_number_atom_parser.c  test_number_parser.c  test_numbers_parser.c  test_parameters_parser.c  test_parser.tab.c  test_reading_parser.c  test_statement_parser.c  test_string_atom_parser.c  test_string_parser.c  test_symbol_name_atom_parser.c  test_symbol_name_parser.c  test_translation_unit_parser.c  test_writing_parser.c  tests.cmake
src/policy/: CMakeLists.txt
src/policy/include/: lexleo_assert.h  lexleo_panic.h  parser_types.h
src/policy/src/: lexleo_panic.c
src/runtime_env/: CMakeLists.txt
src/runtime_env/include/: runtime_env.h
src/runtime_env/src/: runtime_env.c
src/runtime_env/tests/: test_runtime_env.c  tests.cmake
src/runtime_session/: CMakeLists.txt
src/runtime_session/include/: runtime_session.h
src/runtime_session/src/: runtime_session.c
src/runtime_session/tests/: test_runtime_session.c  tests.cmake
src/string_utils/: CMakeLists.txt
src/string_utils/include/: string_utils.h
src/string_utils/src/: string_utils.c
src/symtab/: CMakeLists.txt
src/symtab/include/: symtab.h
src/symtab/src/: symtab.c
src/symtab/tests/: test_symtab.c  test_symtab_external_doubling.c  tests.cmake
symtab/: CMakeLists.txt
symtab/include/symtab/: symtab.h
symtab/src/: symtab.c
symtab/tests/: CMakeLists.txt  test_symtab.c
tests/: CMakeLists.txt  tests.cmake
tests/test_support/: CMakeLists.txt
tests/test_support/fake_file/: CMakeLists.txt
tools/: CMakeLists.txt  open_doc.c  update_docs_on_droplet.c
tools/osal_tools/: CMakeLists.txt
(+1055 files in other folders)
